syntax = "proto3";
package actor;

message ActorRef {
    uint32    category          = 1;
    string    name              = 2;
    uint32    location          = 3;
}

message RemoteMsg {
    ActorRef    sender        = 1;     //发送者(远程消息的sender不能为空)
    ActorRef    target        = 2;     //目标接收者(远程消息的target不能为空)
    int64       req_id        = 3;     //如果是请求消息会有请求id
    bool        is_respond    = 4;     //是否响应
    string      msg_name      = 5;     //最终消息的名称
    bytes       msg_data      = 6;     //最终消息的数据
}